fixing cards not aligning to center

--- a/assets/styles/tarot-page.css
+++ b/assets/styles/tarot-page.css
@@ -1,16 +1,25 @@
 #tarotDiv {
-    justify-content: center;
-    margin: 10vmin;
+    /* justify-content: center; */
+    /* margin: 10vmin; */
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
   
 .cardsBtnPreShuffle{
     border-color: black;
-
     border-radius: 5%;
-
-    border-radius: 5%;
-
     transform: translateX(-50%);
+}
+.chosenCards {
+    height: 45vmin;
+    width: 25vmin;
+    margin: -6px;
+    border-radius: 5%;
+    border-color: black;
+    /* right: 50%; */
 }
   
 .imagesPreShuffle {
@@ -22,13 +31,6 @@
     justify-content: center;
 
     margin: 0px;
-}
-.chosenCards {
-    height: 45vmin;
-    width: 25vmin;
-    margin: -6px;
-    border-radius: 5%;
-    border-color: black;
 }
 
 .responseCards {
